2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/03_ClassAttProtectedInit.deca
// Description:
//    Programme definir une class avec juste un champ initialisé
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 15/01/2024
class A {
    protected int x = 0;
}